--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://raw.githubusercontent.com/aws-c/upi.cybar.xyz/main/files/UPI-LOGO.webp" alt="UPI Logo">
+            <img src="https://i0.wp.com/i.cybar.xyz/UPI-LOGO.webp" alt="UPI Logo">
         </div>
         <h2>Thank you for Donation❤️</h2>
         <p>Your donation will help us To Alive Site</p>
         
         <div class="qr-code">
-            <img src="https://raw.githubusercontent.com/aws-c/upi.cybar.xyz/main/files/qr.webp" alt="QR Code">
+            <img src="https://i0.wp.com/i.cybar.xyz/qr.webp" alt="QR Code">
         </div>
         <p>Scan this QR code or use the following UPI ID to donate:</p>
         <ul class="upi-list">
