--- a/index.html
+++ b/index.html
@@ -89,36 +89,34 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://i0.wp.com/i.cybar.xyz/UPI-LOGO.webp" alt="UPI Logo">
+            <img src="https://cdn.jsdelivr.net/gh/gamedriveorg/IMG-CDN@main/upi-page/UPI-LOGO.webp" alt="UPI Logo">
         </div>
         <h2>Thank you for Donation❤️</h2>
         <p>Your donation will help us To Alive Site</p>
         
         <div class="qr-code">
-            <img src="https://i0.wp.com/i.cybar.xyz/qr.webp" alt="QR Code">
+            <img src="https://cdn.jsdelivr.net/gh/gamedriveorg/IMG-CDN@main/upi-page/UPI-QR.webp" alt="QR Code">
         </div>
         <p>Scan this QR code or use the following UPI ID to donate:</p>
         <ul class="upi-list">
             <li class="upi-id">
                 <span>ID 1:</span>
-                <span id="upi-id1"><strong>gamedrive@airtel</strong></span>
+                <span id="upi-id1"><strong>gamedrive.org@axl</strong></span>
                 <button class="copy-button" onclick="copyUPIId('upi-id1')">Copy</button>
             </li>
             <li class="upi-id">
                 <span>ID 2:</span>
-                <span id="upi-id2"><strong>nilmadhab187-1@okhdfcbank</strong></span>
+                <span id="upi-id2"><strong>cybar.xyz@axl</strong></span>
                 <button class="copy-button" onclick="copyUPIId('upi-id2')">Copy</button>
             </li>
         </ul>
   <!-- Ko-fi Gif Donation Buttons -->
 <div class="kofi-buttons">
- <a href="https://ko-fi.com/gamedriveorg"><img src="https://i0.wp.com/i.cybar.xyz/ko-fi.gif" alt="Ko-fi Button 1"></a>
+ <a href="https://ko-fi.com/gamedriveorg"><img src="https://cdn.jsdelivr.net/gh/gamedriveorg/IMG-CDN@main/upi-page/ko-fi.webp" alt="Ko-fi Button 1"></a>
  
  <a href="https://www.paypal.com/paypalme/ARUSX">
-    <img src="https://i0.wp.com/i.cybar.xyz/PayPal.webp" alt="Ko-fi Button 2"></a>     
+    <img src="https://cdn.jsdelivr.net/gh/gamedriveorg/IMG-CDN@main/upi-page/PayPal.webp" alt="Ko-fi Button 2"></a>     
   
     </div>
 </body>
-</html>
-
 </html>
